Add Verse of the Day section to HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 p-6">
+ <div id="dailyVerse" class="bg-white rounded shadow-md p-4 mb-6 max-w-xl mx-auto text-center">
+  <h2 class="text-xl font-semibold text-gray-800 mb-2">Verse of the Day</h2>
+  <p id="verseText" class="text-gray-700 italic">Loading verse...</p>
+  <p id="verseRef" class="text-sm text-gray-500 mt-1"></p>
+</div> 
   <h1 class="text-3xl font-bold mb-6 text-center">Prayer & Gratitude Journal</h1>
   
   <form id="journalForm" class="bg-white p-6 rounded shadow-md max-w-xl mx-auto">
