--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <h2 class="text-xl font-semibold text-gray-800 mb-2">Verse of the Day</h2>
   <p id="verseText" class="text-gray-700 italic">Loading verse...</p>
   <p id="verseRef" class="text-sm text-gray-500 mt-1"></p>
+   <p id="verseVersion" class="text-xs text-gray-400 mt-1"></p>
+
+<button onclick="copyVerse()" class="mt-2 bg-blue-200 hover:bg-blue-300 text-blue-900 text-sm px-3 py-1 rounded">
+  Copy Verse
+</button>
+
+<a id="fullChapterLink" href="#" target="_blank" class="block mt-2 text-blue-600 text-sm hover:underline">
+  Read full chapter →
+</a>
+
 </div> 
   <h1 class="text-3xl font-bold mb-6 text-center">Prayer & Gratitude Journal</h1>
   
