--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prayer Journal</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-    .spin {
-      animation: spin 1s linear infinite;
-    }
+   <style>
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-  </style>
-
+  .spin {
+    display: inline-block;
+    animation: spin 1s linear infinite;
+  }
+</style>
 </head>
 <body class="bg-gray-100 p-6">
  <div id="dailyVerse" class="bg-white rounded shadow-md p-4 mb-6 max-w-xl mx-auto text-center">
   <h2 class="text-xl font-semibold text-gray-800 mb-2">Verse of the Day</h2>
   <p id="verseText" class="text-gray-700 italic">Loading verse...</p>
-   <div id="verseSpinner" class="animate-spin inline-block ml-2 w-4 h-4 border-2 border-blue-400 border-t-transparent rounded-full"></div>
+<div id="verseSpinner" class="spin ml-2 w-4 h-4 border-2 border-blue-400 border-t-transparent rounded-full"></div>
   <p id="verseRef" class="text-sm text-gray-500 mt-1"></p>
    <p id="verseVersion" class="text-xs text-gray-400 mt-1"></p>
 
