--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <div id="dailyVerse" class="bg-white rounded shadow-md p-4 mb-6 max-w-xl mx-auto text-center">
   <h2 class="text-xl font-semibold text-gray-800 mb-2">Verse of the Day</h2>
   <p id="verseText" class="text-gray-700 italic">Loading verse...</p>
-<div id="verseSpinner" class="spin w-6 h-6 border-4 border-blue-500 border-t-transparent rounded-full"></div>
+<div id="verseSpinner" class="spin w-6 h-6 border-4 border-blue-500 border-t-transparent rounded-full">&nbsp;</div>
   <p id="verseRef" class="text-sm text-gray-500 mt-1"></p>
    <p id="verseVersion" class="text-xs text-gray-400 mt-1"></p>
 
