--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2 class="text-xl font-semibold text-gray-800 mb-2">Verse of the Day</h2>
   <p id="verseText" class="text-gray-700 italic">Loading verse...</p>
 <div id="verseSpinner" class="mx-auto my-2">
-  <span class="block w-6 h-6 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></span>
+  <span class="block w-6 h-6 border-4 border-blue-500 border-t-transparent border-solid rounded-full animate-spin"></span>
 </div>
   <p id="verseRef" class="text-sm text-gray-500 mt-1"></p>
    <p id="verseVersion" class="text-xs text-gray-400 mt-1"></p>
